<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Flow.AmountSummaryActivity">

    <include
        android:id="@+id/include2"
        layout="@layout/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/AMPFontBook_section_header"
        android:id="@+id/screen_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="@dimen/material_resting_elevation"
        android:gravity="center"
        android:padding="@dimen/white_spacer_point_five"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2"
        tools:text="@string/default_text" />

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dimmer"
        android:elevation="@dimen/dimmer_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include2" />

    <LinearLayout
        android:layout_width="@dimen/container_min_width"
        android:layout_height="0dp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:elevation="@dimen/dialog_elevation"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include2">

        <!-- Amount -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/AMPFontBook_body_copy"
                android:id="@+id/label_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/amount"/>

            <TextView
                style="@style/AMPFontBook_body_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$"
                android:textAlignment="center"/>

            <TextView
                style="@style/AMPFontBook_body_copy"
                android:id="@+id/amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="0.00"
                android:textAlignment="viewEnd"/>
        </LinearLayout>

        <!-- Tip -->
        <LinearLayout
            android:id="@+id/layout_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/AMPFontBook_body_copy"
                android:id="@+id/label_tip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/tip"/>

            <TextView
                style="@style/AMPFontBook_body_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$"
                android:textAlignment="center"/>

            <TextView
                style="@style/AMPFontBook_body_copy"
                android:id="@+id/tip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="0.00"
                android:textAlignment="viewEnd"/>
        </LinearLayout>

        <!-- Cashback -->
        <LinearLayout
            android:id="@+id/layout_cashback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/AMPFontBook_body_copy"
                android:id="@+id/label_cashback"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/cashback"/>

            <TextView
                style="@style/AMPFontBook_body_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$"
                android:textAlignment="center"/>

            <TextView
                style="@style/AMPFontBook_body_copy"
                android:id="@+id/cashback"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="0.00"
                android:textAlignment="viewEnd"/>
        </LinearLayout>

        <!-- Surcharge -->
        <LinearLayout
            android:id="@+id/layout_surcharge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/AMPFontBook_body_copy"
                android:id="@+id/label_surcharge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/Surcharge"/>

            <TextView
                style="@style/AMPFontBook_body_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$"
                android:textAlignment="center"/>

            <TextView
                style="@style/AMPFontBook_body_copy"
                android:id="@+id/surcharge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="0.00"
                android:textAlignment="viewEnd"/>
        </LinearLayout>

        <!-- line divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/white_spacer_times_two"
            android:background="@color/line_divider_color" />

        <!-- Surcharge -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/white_spacer_times_three">

            <TextView
                style="@style/AMPFontBook_body_bold"
                android:id="@+id/label_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/total"/>

            <TextView
                style="@style/AMPFontBook_body_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$"
                android:textAlignment="center"/>

            <TextView
                style="@style/AMPFontBook_body_bold"
                android:id="@+id/total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="viewEnd"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/button_cancel"
                style="@style/AMPButton_style_grey"
                android:layout_width="0dp"
                android:layout_margin="@dimen/white_spacer_point_five"
                android:layout_weight="1"
                android:onClick="cancelButtonClicked"
                tools:text="@string/default_text" />

            <Button
                android:id="@+id/button_ok"
                style="@style/AMPButton_style_turquoise"
                android:layout_width="0dp"
                android:layout_margin="@dimen/white_spacer_point_five"
                android:layout_weight="1"
                android:onClick="okButtonClicked"
                tools:text="@string/default_text" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>